车源列表详情接口

--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -105,6 +105,7 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/tv_car_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
@@ -113,6 +114,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tv_car_guide_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
@@ -168,6 +170,7 @@
                     android:textSize="10sp" />
 
                 <TextView
+                    android:id="@+id/tv_share_shelves_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
@@ -177,6 +180,7 @@
                     android:textSize="12dp" />
 
                 <TextView
+                    android:id="@+id/tv_create_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -207,6 +211,7 @@
                     android:textSize="13dp" />
 
                 <TextView
+                    android:id="@+id/tv_car_color"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -239,6 +244,7 @@
                     android:textSize="13dp" />
 
                 <TextView
+                    android:id="@+id/tv_car_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -272,6 +278,7 @@
                     android:textSize="13dp" />
 
                 <TextView
+                    android:id="@+id/tv_province"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -304,6 +311,7 @@
                     android:textSize="13dp" />
 
                 <TextView
+                    android:id="@+id/tv_saler_area"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -336,15 +344,13 @@
                     android:textColor="#999999"
                     android:textSize="13dp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:id="@+id/lly_discounts"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginLeft="14dp"
-                    android:background="@drawable/bg_text"
-                    android:text="店内上保险"
-                    android:textColor="#FF5754"
-                    android:textSize="13dp" />
+                    android:orientation="horizontal"></LinearLayout>
 
             </LinearLayout>
 
@@ -370,6 +376,7 @@
                     android:textSize="13dp" />
 
                 <TextView
+                    android:id="@+id/tv_discount_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -403,6 +410,7 @@
                     android:textSize="13dp" />
 
                 <TextView
+                    android:id="@+id/tv_car_formality"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -435,6 +443,7 @@
                     android:textSize="13dp" />
 
                 <TextView
+                    android:id="@+id/tv_car_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -451,6 +460,13 @@
                     android:layout_marginRight="14dp"/>
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
@@ -466,6 +482,7 @@
                         android:textSize="13dp" />
 
                     <TextView
+                        android:id="@+id/tv_car_setting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -499,6 +516,7 @@
                         android:textSize="13dp" />
 
                     <TextView
+                        android:id="@+id/tv_remark"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
