--- a/app/src/main/res/layout/activity_create_new_customer.xml
+++ b/app/src/main/res/layout/activity_create_new_customer.xml
@@ -362,6 +362,7 @@
                     android:textColor="#333333" />
 
                 <TextView
+                    android:id="@+id/tv_want_car_number"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
