--- a/app/src/main/res/layout/activity_customer_detail.xml
+++ b/app/src/main/res/layout/activity_customer_detail.xml
@@ -47,53 +47,63 @@
                 android:paddingRight="14dp"
                 android:paddingTop="10dp">
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#BBBBBB"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tv_not_arrive_shop" />
+
                 <TextView
                     android:id="@+id/tv_not_arrive_shop"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
-                    android:background="#FF5755"
+                    android:background="#BBBBBB"
                     android:gravity="center"
                     android:text="未到店"
                     android:textColor="#FFFFFF"
                     android:textSize="11sp"
-                    app:layout_constraintHorizontal_chainStyle="packed"
-                    app:layout_constraintHorizontal_weight="1" />
+                    app:layout_constraintHorizontal_chainStyle="spread_inside"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_arrive_shop" />
 
                 <TextView
                     android:id="@+id/tv_arrive_shop"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
-                    android:background="#FF5755"
+                    android:background="#BBBBBB"
                     android:gravity="center"
-                    android:text="未到店"
+                    android:text="已到店"
                     android:textColor="#FFFFFF"
                     android:textSize="11sp"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintLeft_toRightOf="@+id/tv_not_arrive_shop" />
+                    app:layout_constraintLeft_toRightOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_reserve" />
 
                 <TextView
                     android:id="@+id/tv_reserve"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
-                    android:background="#FF5755"
+                    android:background="#BBBBBB"
                     android:gravity="center"
-                    android:text="未到店"
+                    android:text="预定"
                     android:textColor="#FFFFFF"
                     android:textSize="11sp"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintLeft_toRightOf="@+id/tv_arrive_shop" />
+                    app:layout_constraintLeft_toRightOf="@+id/tv_arrive_shop"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_deal" />
 
                 <TextView
                     android:id="@+id/tv_deal"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
-                    android:background="#FF5755"
+                    android:background="#BBBBBB"
                     android:gravity="center"
-                    android:text="未到店"
+                    android:text="成交"
                     android:textColor="#FFFFFF"
                     android:textSize="11sp"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintLeft_toRightOf="@+id/tv_reserve" />
+                    app:layout_constraintLeft_toRightOf="@+id/tv_reserve"
+                    app:layout_constraintRight_toRightOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
