--- a/app/src/main/res/layout/item_client.xml
+++ b/app/src/main/res/layout/item_client.xml
@@ -28,6 +28,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_demand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
@@ -54,6 +55,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_follow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
@@ -71,6 +73,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
@@ -81,6 +84,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_status"
         android:layout_width="42dp"
         android:layout_height="20dp"
         android:text="未到店"
