--- a/app/src/main/res/layout/activity_all_source_search.xml
+++ b/app/src/main/res/layout/activity_all_source_search.xml
@@ -24,13 +24,14 @@
             android:layout_marginTop="8dp"
             android:background="#F2F2F2"
             android:drawableLeft="@mipmap/search"
+            android:hint="车牌型号/VIN号/车辆编号"
             android:paddingLeft="20dp"
-            android:text="车牌型号/VIN号/车辆编号"
             android:textColor="#999999"
             android:textSize="14dp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
