--- a/app/src/main/res/layout/activity_vehicleheat.xml
+++ b/app/src/main/res/layout/activity_vehicleheat.xml
@@ -61,6 +61,11 @@
             android:text="7月" />
 
     </RadioGroup>
+    
+    <Spinner
+        android:id="@+id/spinner_month"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"></Spinner>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -85,6 +90,7 @@
                 android:textColor="#333333" />
 
             <TextView
+                android:id="@+id/tv_release"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -109,6 +115,7 @@
                 android:textColor="#333333" />
 
             <TextView
+                android:id="@+id/tv_shelves"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -140,6 +147,7 @@
                 android:textColor="#333333" />
 
             <TextView
+                android:id="@+id/tv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -164,6 +172,7 @@
                 android:textColor="#333333" />
 
             <TextView
+                android:id="@+id/tv_browse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
